--- a/accounts/templates/accounts/admin-dashboard.html
+++ b/accounts/templates/accounts/admin-dashboard.html
@@ -28,9 +28,11 @@
         <div class="logo"><div class="logo-icon">💊</div><span class="logo-text">DiagnoCare</span></div>
         <div class="nav-cta">
           <a class="btn btn-outline" href="home.html">Home</a>
-          <!--<button id="logoutAdmin" class="btn btn-primary">Logout</button>-->
+          <!--<button id="logoutAdmin" class="btn btn-primary">Logout</button>--
           <button onclick="window.location.href='{% url 'logout' %}'" class="btn btn-primary">
-  Logout
+  Logout-->
+  <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+
 </button>
 
         
